--- a/SourceFiles/view/qml.qrc
+++ b/SourceFiles/view/qml.qrc
@@ -2,15 +2,17 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>style/colors/colors.qml</file>
-        <file>style/Themes/dayBlue/background.png</file>
-        <file>style/Themes/dayBlue/colors.qml</file>
-        <file>style/Themes/dayCustomBase/background.jpg</file>
-        <file>style/Themes/dayCustomBase/colors.qml</file>
-        <file>style/Themes/night/background.png</file>
-        <file>style/Themes/night/colors.qml</file>
-        <file>style/Themes/nightCustomBase/background.jpg</file>
-        <file>style/Themes/nightCustomBase/colors.qml</file>
-        <file>style/Themes/nightGreen/background.png</file>
-        <file>style/Themes/nightGreen/colors.qml</file>
+        <file>layouts/AppMainActivity.qml</file>
+        <file>style/Style.qml</file>
+        <file>style/themes/dayBlue/background.png</file>
+        <file>style/themes/dayBlue/DayBlueColors.qml</file>
+        <file>style/themes/dayCustomBase/background.jpg</file>
+        <file>style/themes/dayCustomBase/DayCustomBaseColors.qml</file>
+        <file>style/themes/night/background.png</file>
+        <file>style/themes/night/NightColors.qml</file>
+        <file>style/themes/nightCustomBase/background.jpg</file>
+        <file>style/themes/nightCustomBase/NightCustomColors.qml</file>
+        <file>style/themes/nightGreen/background.png</file>
+        <file>style/themes/nightGreen/NightGreenColors.qml</file>
     </qresource>
 </RCC>
