--- a/Resources/qrc/icons.qrc
+++ b/Resources/qrc/icons.qrc
@@ -56,5 +56,8 @@
         <file>../icons/info/info_media_voice.png</file>
         <file>../icons/info/info_media_voice@2x.png</file>
         <file>../icons/info/info_media_voice@3x.png</file>
+        <file>../icons/upload_chat_photo.png</file>
+        <file>../icons/upload_chat_photo@2x.png</file>
+        <file>../icons/upload_chat_photo@3x.png</file>
     </qresource>
 </RCC>
