select conversations & remove them entirely from DB Closes #1

--- a/SourceFiles/view/qml.qrc
+++ b/SourceFiles/view/qml.qrc
@@ -61,5 +61,6 @@
         <file>components/drawer/conversation/AddNewChannelDrawer.qml</file>
         <file>components/toolbar/NewChannelToolbar.qml</file>
         <file>style/themes/current/Theme.qml</file>
+        <file>components/toolbar/OptionalHeader.qml</file>
     </qresource>
 </RCC>
