--- a/Resources/qrc/icons.qrc
+++ b/Resources/qrc/icons.qrc
@@ -73,5 +73,17 @@
         <file>../icons/passport_ready@3x.png</file>
         <file>../icons/passport_ready.png</file>
         <file>../icons/passport_ready@2x.png</file>
+        <file>../icons/archive_userpic@3x.png</file>
+        <file>../icons/archive_userpic.png</file>
+        <file>../icons/archive_userpic@2x.png</file>
+        <file>../icons/info/info_media_delete.png</file>
+        <file>../icons/info/info_media_delete@2x.png</file>
+        <file>../icons/info/info_media_delete@3x.png</file>
+        <file>../icons/settings/sound@3x.png</file>
+        <file>../icons/settings/sound.png</file>
+        <file>../icons/settings/sound@2x.png</file>
+        <file>../icons/player/player_more@3x.png</file>
+        <file>../icons/player/player_more.png</file>
+        <file>../icons/player/player_more@2x.png</file>
     </qresource>
 </RCC>
