--- a/SourceFiles/view/qml.qrc
+++ b/SourceFiles/view/qml.qrc
@@ -62,5 +62,10 @@
         <file>components/toolbar/NewChannelToolbar.qml</file>
         <file>style/themes/current/Theme.qml</file>
         <file>components/toolbar/OptionalHeader.qml</file>
+        <file>components/musicPlayer/MusicPlayerDrawer.qml</file>
+        <file>components/musicPlayer/MiniMusicPlayer.qml</file>
+        <file>components/musicPlayer/MusicController.qml</file>
+        <file>components/musicPlayer/MusicList.qml</file>
+        <file>components/musicPlayer/MusicDelegate.qml</file>
     </qresource>
 </RCC>
