--- a/SourceFiles/view/qml.qrc
+++ b/SourceFiles/view/qml.qrc
@@ -67,5 +67,6 @@
         <file>components/musicPlayer/MusicController.qml</file>
         <file>components/musicPlayer/MusicList.qml</file>
         <file>components/musicPlayer/MusicDelegate.qml</file>
+        <file>components/toolbar/MessageOptionHeader.qml</file>
     </qresource>
 </RCC>
