--- a/Resources/qrc/icons.qrc
+++ b/Resources/qrc/icons.qrc
@@ -117,5 +117,8 @@
         <file>../icons/player/player_forward.png</file>
         <file>../icons/player/player_forward@2x.png</file>
         <file>../icons/player/player_forward@3x.png</file>
+        <file>../icons/calendar_down.png</file>
+        <file>../icons/calendar_down@2x.png</file>
+        <file>../icons/calendar_down@3x.png</file>
     </qresource>
 </RCC>
