--- a/ZeroDayProject/Resources/qrc/icons.qrc
+++ b/ZeroDayProject/Resources/qrc/icons.qrc
@@ -6,7 +6,6 @@
         <file>../icons/info/info_search.png</file>
         <file>../icons/info/info_search@2x.png</file>
         <file>../icons/info/info_search@3x.png</file>
-        <file>../icons/mGram/logo.png</file>
         <file>../icons/listItems/kanban.png</file>
         <file>../icons/listItems/calendar.png</file>
         <file>../icons/listItems/timeline.png</file>
@@ -120,5 +119,8 @@
         <file>../icons/calendar_down.png</file>
         <file>../icons/calendar_down@2x.png</file>
         <file>../icons/calendar_down@3x.png</file>
+        <file>../icons/mGram/logo_1.png</file>
+        <file>../icons/mGram/logo_2.png</file>
+        <file>../icons/mGram/logo_3.png</file>
     </qresource>
 </RCC>
