add snackbar Closes #18

--- a/ZeroDayProject/SourceFiles/view/qml.qrc
+++ b/ZeroDayProject/SourceFiles/view/qml.qrc
@@ -73,5 +73,6 @@
         <file>components/drawer/conversation/ConversationProfileDrawer.qml</file>
         <file>components/toolbar/ConversationProfileDrawerToolbar.qml</file>
         <file>components/drawer/conversation/MultiConversationDrawer.qml</file>
+        <file>components/snackbar/Snackbar.qml</file>
     </qresource>
 </RCC>
